syntax = "proto2";

package spipe.pb;

message Propose {
  optional bytes rand = 1;
  optional bytes public_key = 2;
  optional string exchanges = 3;
  optional string ciphers = 4;
  optional string hashes = 5;
}

message Exchange {
  optional bytes ephemeral_public_key = 1;
  optional bytes signature = 2;
}